<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:summary="Enter your city"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="textCapSentences"
            android:singleLine="true"
            />

        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_value_default"
            android:entries="@array/Units"
            android:entryValues="@array/UnitsValue"
            android:summary="Select Your Units"
            />

</PreferenceScreen>